@@ -97,6 +97,7 @@ import org.apache.iceberg.view.BaseViewOperations;
 import org.apache.iceberg.view.ViewBuilder;
 import org.apache.iceberg.view.ViewMetadata;
 import org.apache.iceberg.view.ViewMetadataParser;
+import org.apache.iceberg.view.ViewOperations;
 import org.apache.iceberg.view.ViewUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.TestOnly;
@@ -107,10 +108,9 @@ import software.amazon.awssdk.core.exception.SdkException;
 /** Defines the relationship between PolarisEntities and Iceberg's business logic. */
 public class BasePolarisCatalog extends BaseMetastoreViewCatalog
     implements SupportsNamespaces, SupportsNotifications, Closeable, SupportsCredentialDelegation {
-  private static final Logger LOG = LoggerFactory.getLogger(BasePolarisCatalog.class);
+  private static final Logger LOGGER = LoggerFactory.getLogger(BasePolarisCatalog.class);
 
   private static final Joiner SLASH = Joiner.on("/");
-  private static final Joiner DOT = Joiner.on(".");
 
   // Config key for whether to allow setting the FILE_IO_IMPL using catalog properties. Should
   // only be allowed in dev/test environments.
@@ -118,19 +118,16 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   private static final int MAX_RETRIES = 12;
 
   static final Predicate<Exception> SHOULD_RETRY_REFRESH_PREDICATE =
-      new Predicate<Exception>() {
-        @Override
-        public boolean test(Exception ex) {
-          // Default arguments from BaseMetastoreTableOperation only stop retries on
-          // NotFoundException. We should more carefully identify the set of retriable
-          // and non-retriable exceptions here.
-          return !(ex instanceof NotFoundException)
-              && !(ex instanceof IllegalArgumentException)
-              && !(ex instanceof AlreadyExistsException)
-              && !(ex instanceof ForbiddenException)
-              && !(ex instanceof UnprocessableEntityException)
-              && isStorageProviderRetryableException(ex);
-        }
+      ex -> {
+        // Default arguments from BaseMetastoreTableOperation only stop retries on
+        // NotFoundException. We should more carefully identify the set of retriable
+        // and non-retriable exceptions here.
+        return !(ex instanceof NotFoundException)
+            && !(ex instanceof IllegalArgumentException)
+            && !(ex instanceof AlreadyExistsException)
+            && !(ex instanceof ForbiddenException)
+            && !(ex instanceof UnprocessableEntityException)
+            && isStorageProviderRetryableException(ex);
       };
   public static final String CLEANUP_ON_NAMESPACE_DROP = "CLEANUP_ON_NAMESPACE_DROP";
 
@@ -142,7 +139,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   private final AuthenticatedPolarisPrincipal authenticatedPrincipal;
   private String ioImplClassName;
   private FileIO catalogFileIO;
-  private String catalogName;
+  private final String catalogName;
   private long catalogId = -1;
   private String defaultBaseLocation;
   private CloseableGroup closeableGroup;
@@ -218,13 +215,13 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
             "Cannot set property '%s' to '%s' for this catalog.",
             CatalogProperties.FILE_IO_IMPL, ioImplClassName);
       }
-      LOG.debug(
+      LOGGER.debug(
           "Allowing overriding ioImplClassName to {} for storageConfiguration {}",
           ioImplClassName,
           storageConfigurationInfo);
     } else {
       ioImplClassName = storageConfigurationInfo.getFileIoImplClassName();
-      LOG.debug(
+      LOGGER.debug(
           "Resolved ioImplClassName {} for storageConfiguration {}",
           ioImplClassName,
           storageConfigurationInfo);
@@ -345,21 +342,20 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
                   try {
                     clone.putAll(catalogFileIO.properties());
                   } catch (UnsupportedOperationException e) {
-                    LOG.warn("FileIO doesn't implement properties()");
+                    LOGGER.warn("FileIO doesn't implement properties()");
                   }
                   clone.put(PolarisTaskConstants.STORAGE_LOCATION, lastMetadata.location());
                   return clone;
                 })
             .orElse(Map.of());
     PolarisMetaStoreManager.DropEntityResult dropEntityResult =
-        dropTableLike(
-            catalogId, PolarisEntitySubType.TABLE, tableIdentifier, storageProperties, purge);
+        dropTableLike(PolarisEntitySubType.TABLE, tableIdentifier, storageProperties, purge);
     if (!dropEntityResult.isSuccess()) {
       return false;
     }
 
     if (purge && lastMetadata != null && dropEntityResult.getCleanupTaskId() != null) {
-      LOG.info(
+      LOGGER.info(
           "Scheduled cleanup task {} for table {}",
           dropEntityResult.getCleanupTaskId(),
           tableIdentifier);
@@ -377,7 +373,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
           "Cannot list tables for namespace. Namespace does not exist: %s", namespace);
     }
 
-    return listTableLike(catalogId, PolarisEntitySubType.TABLE, namespace);
+    return listTableLike(PolarisEntitySubType.TABLE, namespace);
   }
 
   @Override
@@ -386,7 +382,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
       return;
     }
 
-    renameTableLike(catalogId, PolarisEntitySubType.TABLE, from, to);
+    renameTableLike(PolarisEntitySubType.TABLE, from, to);
   }
 
   @Override
@@ -396,7 +392,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
 
   @Override
   public void createNamespace(Namespace namespace, Map<String, String> metadata) {
-    LOG.debug("Creating namespace {} with metadata {}", namespace, metadata);
+    LOGGER.debug("Creating namespace {} with metadata {}", namespace, metadata);
     if (namespace.isEmpty()) {
       throw new AlreadyExistsException(
           "Cannot create root namespace, as it already exists implicitly.");
@@ -436,13 +432,12 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
         .getConfigurationStore()
         .getConfiguration(
             callContext.getPolarisCallContext(),
-            PolarisConfiguration.ALLOW_NAMESPACE_LOCATION_OVERLAP,
-            PolarisConfiguration.DEFAULT_ALLOW_NAMESPACE_LOCATION_OVERLAP)) {
-      LOG.debug("Validating no overlap for {} with sibling tables or namespaces", namespace);
+            PolarisConfiguration.ALLOW_NAMESPACE_LOCATION_OVERLAP)) {
+      LOGGER.debug("Validating no overlap for {} with sibling tables or namespaces", namespace);
       validateNoLocationOverlap(
           entity.getBaseLocation(), resolvedParent.getRawFullPath(), entity.getName());
     } else {
-      LOG.debug("Skipping location overlap validation for namespace '{}'", namespace);
+      LOGGER.debug("Skipping location overlap validation for namespace '{}'", namespace);
     }
     PolarisEntity returnedEntity =
         PolarisEntity.of(
@@ -527,11 +522,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
 
   @Override
   public boolean namespaceExists(Namespace namespace) {
-    PolarisResolvedPathWrapper resolvedEntities = resolvedEntityView.getResolvedPath(namespace);
-    if (resolvedEntities == null) {
-      return false;
-    }
-    return true;
+    return resolvedEntityView.getResolvedPath(namespace) != null;
   }
 
   @Override
@@ -586,15 +577,14 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
         .getConfigurationStore()
         .getConfiguration(
             callContext.getPolarisCallContext(),
-            PolarisConfiguration.ALLOW_NAMESPACE_LOCATION_OVERLAP,
-            PolarisConfiguration.DEFAULT_ALLOW_NAMESPACE_LOCATION_OVERLAP)) {
-      LOG.debug("Validating no overlap with sibling tables or namespaces");
+            PolarisConfiguration.ALLOW_NAMESPACE_LOCATION_OVERLAP)) {
+      LOGGER.debug("Validating no overlap with sibling tables or namespaces");
       validateNoLocationOverlap(
           NamespaceEntity.of(updatedEntity).getBaseLocation(),
           resolvedEntities.getRawParentPath(),
           updatedEntity.getName());
     } else {
-      LOG.debug("Skipping location overlap validation for namespace '{}'", namespace);
+      LOGGER.debug("Skipping location overlap validation for namespace '{}'", namespace);
     }
 
     List<PolarisEntity> parentPath = resolvedEntities.getRawFullPath();
@@ -701,18 +691,17 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
           "Cannot list views for namespace. Namespace does not exist: %s", namespace);
     }
 
-    return listTableLike(catalogId, PolarisEntitySubType.VIEW, namespace);
+    return listTableLike(PolarisEntitySubType.VIEW, namespace);
   }
 
   @Override
-  protected BasePolarisViewOperations newViewOps(TableIdentifier identifier) {
+  protected ViewOperations newViewOps(TableIdentifier identifier) {
     return new BasePolarisViewOperations(catalogFileIO, identifier);
   }
 
   @Override
   public boolean dropView(TableIdentifier identifier) {
-    return dropTableLike(catalogId, PolarisEntitySubType.VIEW, identifier, Map.of(), true)
-        .isSuccess();
+    return dropTableLike(PolarisEntitySubType.VIEW, identifier, Map.of(), true).isSuccess();
   }
 
   @Override
@@ -721,14 +710,14 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
       return;
     }
 
-    renameTableLike(catalogId, PolarisEntitySubType.VIEW, from, to);
+    renameTableLike(PolarisEntitySubType.VIEW, from, to);
   }
 
   @Override
   public boolean sendNotification(
       TableIdentifier identifier, NotificationRequest notificationRequest) {
     return sendNotificationForTableLike(
-        catalogId, PolarisEntitySubType.TABLE, identifier, notificationRequest);
+        PolarisEntitySubType.TABLE, identifier, notificationRequest);
   }
 
   @Override
@@ -738,7 +727,8 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
       Set<PolarisStorageActions> storageActions) {
     Optional<PolarisEntity> storageInfo = findStorageInfo(tableIdentifier);
     if (storageInfo.isEmpty()) {
-      LOG.atWarn()
+      LOGGER
+          .atWarn()
           .addKeyValue("tableIdentifier", tableIdentifier)
           .log("Table entity has no storage configuration in its hierarchy");
       return Map.of();
@@ -763,7 +753,8 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
       String modifiedLocation =
           defaultBaseLocation
               + specifiedTableLikeLocation.substring(replaceNewLocationPrefix.length());
-      LOG.atDebug()
+      LOGGER
+          .atDebug()
           .addKeyValue("specifiedTableLikeLocation", specifiedTableLikeLocation)
           .addKeyValue("modifiedLocation", modifiedLocation)
           .log("Translating specifiedTableLikeLocation based on config");
@@ -820,12 +811,13 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
                 allowList,
                 tableLocations,
                 writeLocations);
-    LOG.atDebug()
+    LOGGER
+        .atDebug()
         .addKeyValue("tableIdentifier", tableIdentifier)
         .addKeyValue("credentialKeys", credentialsMap.keySet())
         .log("Loaded scoped credentials for table");
     if (credentialsMap.isEmpty()) {
-      LOG.debug("No credentials found for table");
+      LOGGER.debug("No credentials found for table");
     }
     return credentialsMap;
   }
@@ -879,7 +871,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
                                       "Invalid location '%s' for identifier '%s': %s",
                                       location, identifier, result.getMessage());
                                 } else {
-                                  LOG.debug(
+                                  LOGGER.debug(
                                       "Validated location '{}' for identifier '{}'",
                                       location,
                                       identifier);
@@ -919,16 +911,13 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
                   "Invalid location '%s' for identifier '%s': File locations are not allowed",
                   location, identifier);
             }
+          }
         });
   }
 
   /**
    * Validates the table location has no overlap with other entities after checking the
    * configuration of the service
-   *
-   * @param identifier
-   * @param resolvedNamespace
-   * @param location
    */
   private void validateNoLocationOverlap(
       TableIdentifier identifier, List<PolarisEntity> resolvedNamespace, String location) {
@@ -937,14 +926,13 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
         .getConfigurationStore()
         .getConfiguration(
             callContext.getPolarisCallContext(),
-            PolarisConfiguration.ALLOW_TABLE_LOCATION_OVERLAP,
-            PolarisConfiguration.DEFAULT_ALLOW_TABLE_LOCATION_OVERLAP)) {
-      LOG.debug("Skipping location overlap validation for identifier '{}'", identifier);
+            PolarisConfiguration.ALLOW_TABLE_LOCATION_OVERLAP)) {
+      LOGGER.debug("Skipping location overlap validation for identifier '{}'", identifier);
     } else { // if (entity.getSubType().equals(PolarisEntitySubType.TABLE)) {
       // TODO - is this necessary for views? overlapping views do not expose subdirectories via the
       // credential vending
       //  so this feels like an unnecessary restriction
-      LOG.debug("Validating no overlap with sibling tables or namespaces");
+      LOGGER.debug("Validating no overlap with sibling tables or namespaces");
       validateNoLocationOverlap(location, resolvedNamespace, identifier.name());
     }
   }
@@ -955,9 +943,6 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
    * is a namespace whose parent is the catalog, namespaces and tables otherwise) and checks the
    * base-location property of each. The target entity's base location may not be a prefix or a
    * suffix of any sibling entity's base location.
-   *
-   * @param location
-   * @param parentPath
    */
   private void validateNoLocationOverlap(
       String location, List<PolarisEntity> parentPath, String name) {
@@ -978,7 +963,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
     // namespaces
     Optional<NamespaceEntity> parentNamespace =
         parentPath.size() > 1
-            ? Optional.of(NamespaceEntity.of(parentPath.get(parentPath.size() - 1)))
+            ? Optional.of(NamespaceEntity.of(parentPath.getLast()))
             : Optional.empty();
 
     List<TableIdentifier> siblingTables =
@@ -1004,7 +989,6 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
                       .collect(Collectors.toList());
                 })
             .orElse(List.of());
-    ;
 
     List<Namespace> siblingNamespaces =
         siblingNamespacesResult.getEntities().stream()
@@ -1018,13 +1002,13 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
                   newLevels[nsLevels.length] = ns.getName();
                   return Namespace.of(newLevels);
                 })
-            .collect(Collectors.toList());
-    LOG.debug(
+            .toList();
+    LOGGER.debug(
         "Resolving {} sibling entities to validate location",
         siblingTables.size() + siblingNamespaces.size());
     PolarisResolutionManifest resolutionManifest =
         new PolarisResolutionManifest(
-            callContext, entityManager, authenticatedPrincipal, parentPath.get(0).getName());
+            callContext, entityManager, authenticatedPrincipal, parentPath.getFirst().getName());
     siblingTables.forEach(
         tbl ->
             resolutionManifest.addPath(
@@ -1076,11 +1060,9 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
 
   private class BasePolarisCatalogTableBuilder
       extends BaseMetastoreViewCatalog.BaseMetastoreViewCatalogTableBuilder {
-    private final TableIdentifier identifier;
 
     public BasePolarisCatalogTableBuilder(TableIdentifier identifier, Schema schema) {
       super(identifier, schema);
-      this.identifier = identifier;
     }
 
     @Override
@@ -1090,11 +1072,9 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   }
 
   private class BasePolarisCatalogViewBuilder extends BaseMetastoreViewCatalog.BaseViewBuilder {
-    private final TableIdentifier identifier;
 
     public BasePolarisCatalogViewBuilder(TableIdentifier identifier) {
       super(identifier);
-      this.identifier = identifier;
     }
 
     @Override
@@ -1109,7 +1089,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
     private FileIO tableFileIO;
 
     BasePolarisTableOperations(FileIO defaultFileIO, TableIdentifier tableIdentifier) {
-      LOG.debug("new BasePolarisTableOperations for {}", tableIdentifier);
+      LOGGER.debug("new BasePolarisTableOperations for {}", tableIdentifier);
       this.tableIdentifier = tableIdentifier;
       this.fullTableName = fullTableName(catalogName, tableIdentifier);
       this.tableFileIO = defaultFileIO;
@@ -1117,7 +1097,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
 
     @Override
     public void doRefresh() {
-      LOG.debug("doRefresh for tableIdentifier {}", tableIdentifier);
+      LOGGER.debug("doRefresh for tableIdentifier {}", tableIdentifier);
       // While doing refresh/commit protocols, we must fetch the fresh "passthrough" resolved
       // table entity instead of the statically-resolved authz resolution set.
       PolarisResolvedPathWrapper resolvedEntities =
@@ -1128,15 +1108,16 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
       if (resolvedEntities != null) {
         entity = TableLikeEntity.of(resolvedEntities.getRawLeafEntity());
         if (!tableIdentifier.equals(entity.getTableIdentifier())) {
-          LOG.atError()
+          LOGGER
+              .atError()
               .addKeyValue("entity.getTableIdentifier()", entity.getTableIdentifier())
               .addKeyValue("tableIdentifier", tableIdentifier)
-              .log("Stored entity identifier mismatches requested identifier");
+              .log("Stored table identifier mismatches requested identifier");
         }
       }
 
       String latestLocation = entity != null ? entity.getMetadataLocation() : null;
-      LOG.debug("Refreshing latestLocation: {}", latestLocation);
+      LOGGER.debug("Refreshing latestLocation: {}", latestLocation);
       if (latestLocation == null) {
         disableRefresh();
       } else {
@@ -1146,18 +1127,13 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
             MAX_RETRIES,
             metadataLocation -> {
               FileIO fileIO = this.tableFileIO;
-              boolean closeFileIO = false;
-              PolarisResolvedPathWrapper resolvedStorageEntity =
-                  resolvedEntities == null
-                      ? resolvedEntityView.getResolvedPath(tableIdentifier.namespace())
-                      : resolvedEntities;
               String latestLocationDir =
                   latestLocation.substring(0, latestLocation.lastIndexOf('/'));
               fileIO =
                   refreshIOWithCredentials(
                       tableIdentifier,
                       Set.of(latestLocationDir),
-                      resolvedStorageEntity,
+                      resolvedEntities,
                       new HashMap<>(),
                       fileIO);
               return TableMetadataParser.read(fileIO, metadataLocation);
@@ -1167,7 +1143,8 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
 
     @Override
     public void doCommit(TableMetadata base, TableMetadata metadata) {
-      LOG.debug("doCommit for {} with base {}, metadata {}", tableIdentifier, base, metadata);
+      LOGGER.debug(
+          "doCommit for table {} with base {}, metadata {}", tableIdentifier, base, metadata);
       // TODO: Maybe avoid writing metadata if there's definitely a transaction conflict
       if (null == base && !namespaceExists(tableIdentifier.namespace())) {
         throw new NoSuchNamespaceException(
@@ -1200,7 +1177,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
           resolvedTableEntities == null
               ? resolvedEntityView.getResolvedPath(tableIdentifier.namespace()).getRawFullPath()
               : resolvedTableEntities.getRawParentPath();
-      CatalogEntity catalog = CatalogEntity.of(resolvedNamespace.get(0));
+      CatalogEntity catalog = CatalogEntity.of(resolvedNamespace.getFirst());
 
       if (base == null || !metadata.location().equals(base.location())) {
         // If location is changing then we must validate that the requested location is valid
@@ -1271,9 +1248,9 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
             tableIdentifier, oldLocation, newLocation, existingLocation);
       }
       if (null == existingLocation) {
-        createTableLike(catalogId, tableIdentifier, entity);
+        createTableLike(tableIdentifier, entity);
       } else {
-        updateTableLike(catalogId, tableIdentifier, entity);
+        updateTableLike(tableIdentifier, entity);
       }
     }
 
@@ -1291,18 +1268,17 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   private void validateMetadataFileInTableDir(
       TableIdentifier identifier, TableMetadata metadata, CatalogEntity catalog) {
     PolarisCallContext polarisCallContext = callContext.getPolarisCallContext();
-    String allowEscape =
-        catalog
-            .getPropertiesAsMap()
-            .get(PolarisConfiguration.CATALOG_ALLOW_EXTERNAL_TABLE_LOCATION);
-    if (!Boolean.parseBoolean(allowEscape)
+    boolean allowEscape =
+        polarisCallContext
+            .getConfigurationStore()
+            .getConfiguration(
+                polarisCallContext, PolarisConfiguration.ALLOW_EXTERNAL_TABLE_LOCATION);
+    if (!allowEscape
         && !polarisCallContext
             .getConfigurationStore()
             .getConfiguration(
-                polarisCallContext,
-                PolarisConfiguration.ALLOW_EXTERNAL_METADATA_FILE_LOCATION,
-                PolarisConfiguration.DEFAULT_ALLOW_EXTERNAL_METADATA_FILE_LOCATION)) {
-      LOG.debug(
+                polarisCallContext, PolarisConfiguration.ALLOW_EXTERNAL_METADATA_FILE_LOCATION)) {
+      LOGGER.debug(
           "Validating base location {} for table {} in metadata file {}",
           metadata.location(),
           identifier,
@@ -1349,15 +1325,16 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
       if (resolvedEntities != null) {
         entity = TableLikeEntity.of(resolvedEntities.getRawLeafEntity());
         if (!identifier.equals(entity.getTableIdentifier())) {
-          LOG.atError()
+          LOGGER
+              .atError()
               .addKeyValue("entity.getTableIdentifier()", entity.getTableIdentifier())
               .addKeyValue("identifier", identifier)
-              .log("Stored entity identifier mismatches requested identifier");
+              .log("Stored view identifier mismatches requested identifier");
         }
       }
 
       String latestLocation = entity != null ? entity.getMetadataLocation() : null;
-      LOG.debug("Refreshing view latestLocation: {}", latestLocation);
+      LOGGER.debug("Refreshing view latestLocation: {}", latestLocation);
       if (latestLocation == null) {
         disableRefresh();
       } else {
@@ -1368,14 +1345,10 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
             metadataLocation -> {
               FileIO fileIO = this.viewFileIO;
               boolean closeFileIO = false;
-              PolarisResolvedPathWrapper resolvedStorageEntity =
-                  resolvedEntities == null
-                      ? resolvedEntityView.getResolvedPath(identifier.namespace())
-                      : resolvedEntities;
               String latestLocationDir =
                   latestLocation.substring(0, latestLocation.lastIndexOf('/'));
               Optional<PolarisEntity> storageInfoEntity =
-                  findStorageInfoFromHierarchy(resolvedStorageEntity);
+                  findStorageInfoFromHierarchy(resolvedEntities);
               Map<String, String> credentialsMap =
                   storageInfoEntity
                       .map(
@@ -1405,7 +1378,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
     @Override
     public void doCommit(ViewMetadata base, ViewMetadata metadata) {
       // TODO: Maybe avoid writing metadata if there's definitely a transaction conflict
-      LOG.debug("doCommit for {} with base {}, metadata {}", identifier, base, metadata);
+      LOGGER.debug("doCommit for view {} with base {}, metadata {}", identifier, base, metadata);
       if (null == base && !namespaceExists(identifier.namespace())) {
         throw new NoSuchNamespaceException(
             "Cannot create view %s. Namespace does not exist: %s",
@@ -1453,12 +1426,6 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
       String newLocation = writeNewMetadataIfRequired(metadata);
       String oldLocation = base == null ? null : currentMetadataLocation();
 
-      if (null == base && !namespaceExists(identifier.namespace())) {
-        throw new NoSuchNamespaceException(
-            "Cannot create view %s. Namespace does not exist: %s",
-            identifier, identifier.namespace());
-      }
-
       TableLikeEntity entity =
           TableLikeEntity.of(resolvedEntities == null ? null : resolvedEntities.getRawLeafEntity());
       String existingLocation;
@@ -1493,9 +1460,9 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
             identifier, oldLocation, newLocation, existingLocation);
       }
       if (null == existingLocation) {
-        createTableLike(catalogId, identifier, entity);
+        createTableLike(identifier, entity);
       } else {
-        updateTableLike(catalogId, identifier, entity);
+        updateTableLike(identifier, entity);
       }
     }
 
@@ -1556,8 +1523,8 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   }
 
   private void renameTableLike(
-      long catalogId, PolarisEntitySubType subType, TableIdentifier from, TableIdentifier to) {
-    LOG.debug("Renaming tableLike from {} to {}", from, to);
+      PolarisEntitySubType subType, TableIdentifier from, TableIdentifier to) {
+    LOGGER.debug("Renaming tableLike from {} to {}", from, to);
     PolarisResolvedPathWrapper resolvedEntities = resolvedEntityView.getResolvedPath(from, subType);
     if (resolvedEntities == null) {
       if (subType == PolarisEntitySubType.VIEW) {
@@ -1606,7 +1573,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
 
     // handle error
     if (!returnedEntityResult.isSuccess()) {
-      LOG.debug(
+      LOGGER.debug(
           "Rename error {} trying to rename {} to {}. Checking existing object.",
           returnedEntityResult.getReturnStatus(),
           from,
@@ -1619,7 +1586,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
             if (existingEntitySubType == null) {
               // this code path is unexpected
               throw new AlreadyExistsException(
-                  "Cannot rename %s to %s. Object %s already exists", from, to);
+                  "Cannot rename %s to %s. Object already exists", from, to);
             } else if (existingEntitySubType == PolarisEntitySubType.TABLE) {
               throw new AlreadyExistsException(
                   "Cannot rename %s to %s. Table already exists", from, to);
@@ -1652,7 +1619,8 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
         // As long as there are older deployments which don't support the atomic update of the
         // internalProperties during rename, we can log and then patch it up explicitly
         // in a best-effort way.
-        LOG.atError()
+        LOGGER
+            .atError()
             .addKeyValue("toEntity.getTableIdentifier()", toEntity.getTableIdentifier())
             .addKeyValue("returnedEntity.getTableIdentifier()", returnedEntity.getTableIdentifier())
             .log("Returned entity identifier doesn't match toEntity identifier");
@@ -1668,10 +1636,10 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
 
   /**
    * Caller must fill in all entity fields except parentId, since the caller may not want to
-   * duplicate the logic to try to reolve parentIds before constructing the proposed entity. This
+   * duplicate the logic to try to resolve parentIds before constructing the proposed entity. This
    * method will fill in the parentId if needed upon resolution.
    */
-  private void createTableLike(long catalogId, TableIdentifier identifier, PolarisEntity entity) {
+  private void createTableLike(TableIdentifier identifier, PolarisEntity entity) {
     PolarisResolvedPathWrapper resolvedParent =
         resolvedEntityView.getResolvedPath(identifier.namespace());
     if (resolvedParent == null) {
@@ -1680,14 +1648,11 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
           String.format("Failed to fetch resolved parent for TableIdentifier '%s'", identifier));
     }
 
-    createTableLike(catalogId, identifier, entity, resolvedParent);
+    createTableLike(identifier, entity, resolvedParent);
   }
 
   private void createTableLike(
-      long catalogId,
-      TableIdentifier identifier,
-      PolarisEntity entity,
-      PolarisResolvedPathWrapper resolvedParent) {
+      TableIdentifier identifier, PolarisEntity entity, PolarisResolvedPathWrapper resolvedParent) {
     // Make sure the metadata file is valid for our allowed locations.
     String metadataLocation = TableLikeEntity.of(entity).getMetadataLocation();
     validateLocationForTableLike(identifier, metadataLocation, resolvedParent);
@@ -1710,7 +1675,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
                 .getMetaStoreManager()
                 .createEntityIfNotExists(
                     getCurrentPolarisContext(), PolarisEntity.toCoreList(catalogPath), entity));
-    LOG.debug("Created TableLike entity {} with TableIdentifier {}", entity, identifier);
+    LOGGER.debug("Created TableLike entity {} with TableIdentifier {}", entity, identifier);
     if (returnedEntity == null) {
       // TODO: Error or retry?
     }
@@ -1720,7 +1685,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
     return !expectedParentLocation.relativize(childLocation).equals(childLocation);
   }
 
-  private void updateTableLike(long catalogId, TableIdentifier identifier, PolarisEntity entity) {
+  private void updateTableLike(TableIdentifier identifier, PolarisEntity entity) {
     PolarisResolvedPathWrapper resolvedEntities =
         resolvedEntityView.getResolvedPath(identifier, entity.getSubType());
     if (resolvedEntities == null) {
@@ -1749,7 +1714,6 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   }
 
   private @NotNull PolarisMetaStoreManager.DropEntityResult dropTableLike(
-      long catalogId,
       PolarisEntitySubType subType,
       TableIdentifier identifier,
       Map<String, String> storageProperties,
@@ -1775,11 +1739,9 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   }
 
   private boolean sendNotificationForTableLike(
-      long catalogId,
-      PolarisEntitySubType subType,
-      TableIdentifier tableIdentifier,
-      NotificationRequest request) {
-    LOG.debug("Handling notification request {} for tableIdentifier {}", request, tableIdentifier);
+      PolarisEntitySubType subType, TableIdentifier tableIdentifier, NotificationRequest request) {
+    LOGGER.debug(
+        "Handling notification request {} for tableIdentifier {}", request, tableIdentifier);
     PolarisResolvedPathWrapper resolvedEntities =
         resolvedEntityView.getPassthroughResolvedPath(tableIdentifier, subType);
 
@@ -1788,8 +1750,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
     Preconditions.checkNotNull(notificationType, "Expected a valid notification type.");
 
     if (notificationType == NotificationType.DROP) {
-      return dropTableLike(
-              catalogId, PolarisEntitySubType.TABLE, tableIdentifier, Map.of(), false /* purge */)
+      return dropTableLike(PolarisEntitySubType.TABLE, tableIdentifier, Map.of(), false /* purge */)
           .isSuccess();
     } else if (notificationType == NotificationType.CREATE
         || notificationType == NotificationType.UPDATE) {
@@ -1825,7 +1786,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
 
       TableOperations tableOperations = newTableOps(tableIdentifier);
       String locationDir = newLocation.substring(0, newLocation.lastIndexOf("/"));
-      ;
+
       FileIO fileIO =
           refreshIOWithCredentials(
               tableIdentifier,
@@ -1840,22 +1801,24 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
 
       // finally, validate that the metadata file is within the table directory
       validateMetadataFileInTableDir(
-          tableIdentifier, tableMetadata, CatalogEntity.of(resolvedParent.getRawFullPath().get(0)));
+          tableIdentifier,
+          tableMetadata,
+          CatalogEntity.of(resolvedParent.getRawFullPath().getFirst()));
 
       // TODO: These might fail due to concurrent update; we need to do a retry in those cases.
       if (null == existingLocation) {
-        LOG.debug(
+        LOGGER.debug(
             "Creating table {} for notification with metadataLocation {}",
             tableIdentifier,
             newLocation);
-        createTableLike(catalogId, tableIdentifier, entity, resolvedParent);
+        createTableLike(tableIdentifier, entity, resolvedParent);
       } else {
-        LOG.debug(
+        LOGGER.debug(
             "Updating table {} for notification with metadataLocation {}",
             tableIdentifier,
             newLocation);
 
-        updateTableLike(catalogId, tableIdentifier, entity);
+        updateTableLike(tableIdentifier, entity);
       }
     }
     return true;
@@ -1865,11 +1828,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
     // Pre-create namespaces if they don't exist
     for (int i = 1; i <= namespace.length(); i++) {
       Namespace nsLevel =
-          Namespace.of(
-              Arrays.stream(namespace.levels())
-                  .limit(i)
-                  .collect(Collectors.toList())
-                  .toArray(String[]::new));
+          Namespace.of(Arrays.stream(namespace.levels()).limit(i).toArray(String[]::new));
       if (resolvedEntityView.getPassthroughResolvedPath(nsLevel) == null) {
         Namespace parentNamespace = PolarisCatalogHelpers.getParentNamespace(nsLevel);
         PolarisResolvedPathWrapper resolvedParent =
@@ -1879,8 +1838,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
     }
   }
 
-  private List<TableIdentifier> listTableLike(
-      long catalogId, PolarisEntitySubType subType, Namespace namespace) {
+  private List<TableIdentifier> listTableLike(PolarisEntitySubType subType, Namespace namespace) {
     PolarisResolvedPathWrapper resolvedEntities = resolvedEntityView.getResolvedPath(namespace);
     if (resolvedEntities == null) {
       // Illegal state because the namespace should've already been in the static resolution set.
@@ -1959,7 +1917,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
                 || errorMsg.contains("This request is not authorized to perform this operation")
                 || errorMsg.contains("Forbidden"));
     if (isAccessDenied) {
-      LOG.debug("Access Denied or Forbidden error: {}", errorMsg);
+      LOGGER.debug("Access Denied or Forbidden error: {}", errorMsg);
       return true;
     }
     return false;
